# RoboticsProjects

first_project/: CMakeLists.txt  package.xml
first_project/cfg/: lidarRemap.cfg
first_project/launch/: gps_to_odom.launch  launch.launch
first_project/rviz/: configfile.rviz
first_project/src/: gps_to_odom.cpp  lidar_remap.cpp  odom_to_tf.cpp
second_project/: CMakeLists.txt  package.xml
second_project/config/: mapper_params.yaml  mapper_params_online_async_localization.yaml  nav_rviz_cfg.rviz  robot_navigation.rviz  rviz_cfg.rviz
second_project/config/navigation/: costmap_common_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base_params.yaml
second_project/launch/: amcl.launch.xml  launch_mapping.launch  launch_navigation.launch
second_project/maps/: map.pgm  map.yaml
second_project/maps/cleaned/: map_cleaned.pgm  map_cleaned.yaml
second_project/src/: goal_publisher.cpp  odom_tf_publisher.cpp  pointcloud_remap.cpp
second_project/stage/: map.world  scout.inc
